[gd_scene load_steps=3 format=3 uid="uid://cw1d8mdo7bjbb"]

[ext_resource type="Script" path="res://menu/options.gd" id="1_fhuyb"]

[sub_resource type="Theme" id="Theme_ng1rd"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhuyb")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 31.0
offset_right = 374.0
offset_bottom = 71.0
bbcode_enabled = true
text = "[center][b]SETTINGS"
fit_content = true

[node name="AUDIO-SECTION" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 80.0
offset_right = 154.0
offset_bottom = 108.0
bbcode_enabled = true
text = "[b][left]Audio"
fit_content = true

[node name="MasterVolume" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 112.0
offset_right = 194.0
offset_bottom = 140.0
bbcode_enabled = true
text = "[b][left]Master Volume:"
fit_content = true

[node name="MasterSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 112.0
offset_right = 450.0
offset_bottom = 128.0
focus_neighbor_top = NodePath("../BackButton")
focus_neighbor_bottom = NodePath("../MusicSlider")
rounded = true
tick_count = 100

[node name="MusicVolume" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 144.0
offset_right = 194.0
offset_bottom = 172.0
bbcode_enabled = true
text = "[b][left]Music Volume:"
fit_content = true

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 147.0
offset_right = 453.0
offset_bottom = 163.0
focus_neighbor_top = NodePath("../MasterSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
rounded = true
tick_count = 100

[node name="SFXVolume" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 176.0
offset_right = 194.0
offset_bottom = 204.0
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../BrightnessSlider")
bbcode_enabled = true
text = "[b][left]SFX Volume:"
fit_content = true

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 179.0
offset_right = 453.0
offset_bottom = 195.0
rounded = true
tick_count = 100

[node name="VIDEO-SECTION" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 224.0
offset_right = 194.0
offset_bottom = 252.0
bbcode_enabled = true
text = "[b][left]Video:"
fit_content = true

[node name="Brihtness" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 248.0
offset_right = 194.0
offset_bottom = 276.0
bbcode_enabled = true
text = "[b][left]Brightness:"
fit_content = true

[node name="BrightnessSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 251.0
offset_right = 453.0
offset_bottom = 267.0
focus_neighbor_top = NodePath("../SFXSlider")
focus_neighbor_bottom = NodePath("../ScreenOptions")
rounded = true
tick_count = 100

[node name="ScreenMode" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 280.0
offset_right = 194.0
offset_bottom = 308.0
bbcode_enabled = true
text = "[b][left]Screen Mode:"
fit_content = true

[node name="ScreenOptions" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 281.0
offset_right = 328.0
offset_bottom = 301.0
focus_neighbor_top = NodePath("../BrightnessSlider")
focus_neighbor_bottom = NodePath("../CheckBox")
allow_reselect = true

[node name="KEYBOARD-SECTION" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 320.0
offset_right = 194.0
offset_bottom = 348.0
bbcode_enabled = true
text = "[b][left]Keyboard:"
fit_content = true

[node name="KEYBOARD-SECTION2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 352.0
offset_right = 194.0
offset_bottom = 380.0
bbcode_enabled = true
text = "[b][left]Invert X/Y Axis:"
fit_content = true

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 341.0
offset_right = 244.0
offset_bottom = 365.0
focus_neighbor_top = NodePath("../ScreenOptions")
focus_neighbor_bottom = NodePath("../BackButton")
theme = SubResource("Theme_ng1rd")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 389.0
offset_right = 588.0
offset_bottom = 420.0
text = "BACK"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
